--- a/HW1/movies copy.html
+++ b/HW1/movies copy.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-   <title>Great movie Selection</title>
+   <title>Four Great movie Selections</title>
    <meta name="description" content="a list of great movie selections, name of director and trailer">
    <meta charset="utf-8">
    <style>
      body { background-color: #DEB887; color: #A52A2A; }
-     header {width: 60%; background-image: url("../../HW1/banner.png"); margin: 0 auto; text-align: center; box-shadow: 5px 5px 5px #808080; font-size: 1.5rem; color: black;}
+     header {width: 60%; background-image: url("banner.png"); margin: 0 auto; text-align: center; box-shadow: 5px 5px 5px #808080; font-size: 1.5rem; color: black;}
 	 div { width: 80%; margin: 0 auto; border: 2px solid #D2691E; padding: 0 10px;}
      footer {width: 60%; margin: 10px auto; padding: 3px 0; text-align:center; background-color: #A52A2A; color:white; font-size: 0.9rem;}	 
 	 footer img {float:left; margin: 0 5px 5px 0;}
@@ -21,7 +21,7 @@
 <main>
     <section>
 <div itemscope itemtype ="http://schema.org/Movie">
-  <h3 itemprop="name">Avatar</h3>
+  <h2 itemprop="name">Avatar</h2>
     <p>Director: <span itemprop="director">James Cameron</span> (born <span itemprop="birthDate">August 16, 1954)</span></p>
     <p>Type: <span itemprop="genre">Science fiction</span></p>
     <p>Release Date: <span itemprop="ReleaseDate">December 18, 2009</span></p>
@@ -30,7 +30,7 @@
     
     <section>
 <div itemscope itemtype ="http://schema.org/Movie">
-  <h3 itemprop="name">Star Wars: Episode VII</h3>
+  <h2 itemprop="name">Star Wars: Episode VII</h2>
     <p>Director: <span itemprop="director">J. J. Abrams</span> (born <span itemprop="birthDate">June 27, 1966)</span></p>
     <p>Type: <span itemprop="genre">Science fiction</span></p>
     <p>Release Date: <span itemprop="ReleaseDate">December 18, 2015</span></p>
@@ -39,7 +39,7 @@
    
     <section>
 <div itemscope itemtype ="http://schema.org/Movie">
-  <h3 itemprop="name">Titanic</h3>
+  <h2 itemprop="name">Titanic</h2>
     <p>Director: <span itemprop="director">James Cameron</span> (born <span itemprop="birthDate">August 16, 1954)</span></p>
     <p>Type: <span itemprop="genre">Drama</span></p>
     <p>Release Date: <span itemprop="ReleaseDate">December 19, 1997</span></p>
@@ -47,7 +47,7 @@
     </section>
 <section>
 <div itemscope itemtype ="http://schema.org/Movie">
-  <h3 itemprop="name">Schindler's List</h3>
+  <h2 itemprop="name">Schindler's List</h2>
     <p>Director: <span itemprop="director">Steven Spielberg</span> (born <span itemprop="birthDate">December 18, 1946)</span></p>
     <p>Type: <span itemprop="genre">Drama</span></p>
     <p>Release Date: <span itemprop="ReleaseDate">December 15, 1993</span></p>
@@ -56,7 +56,7 @@
 </main>   
 
 <footer>
-  <img src="../../HW1/movielogo.png" alt="great movie">
+  <img src="movielogo.png" alt="great movie">
   <p>List made by CNIT 132A class at CCSF</p>
   <p>Copyright &copy; 2017</p>
 </footer>  
