--- a/HW1/movies copy.html
+++ b/HW1/movies copy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-   <title>Four great movies selection including movie directors, movie type, and movie release date. </title>
+   <title>Four great movies selections</title>
    <meta name="description" content="a list of great movie selections, name of director and trailer">
    <meta charset="utf-8">
    <style>
