--- a/HW1/H1-assignment.html
+++ b/HW1/H1-assignment.html
@@ -21,6 +21,8 @@
         <li><a href="../HW1/hw2part1.html">Homework 2 Part One</a></li>
         <li><a href="../HW1/hw2part2.html">Homework 2 Part Two</a></li>
         <li><a href="movies copy.html">Homework 3</a></li>
+        <li><a href="hw6.html">Homework 6 Part One</a></li>
+          <li><a href="hw6(2).html">Homework 6 Part Two</a></li>
       </ul>
     </section>
   </main>
